Tue Sep  6 08:14:42 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/Any.h:
        * tao/AnyTypeCode/Any.cpp:
          Added support for std::wstring

Tue Sep  6 08:06:46 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Basic_SArguments.h:
          Added support for std::wstring

Thu Sep  1 09:59:22 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/AnyTypeCode_Adapter_Impl.h:
        * tao/AnyTypeCode/AnyTypeCode_Adapter_Impl.cpp:
        * tao/AnyTypeCode_Adapter.h:
        * tao/Basic_Arguments.h:
          Added support for std::wstring

Thu Sep  1 06:31:53 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/BD_String_SArgument_T.cpp:
        * tao/PortableServer/Basic_SArgument_T.cpp:
        * tao/PortableServer/Fixed_Array_SArgument_T.cpp:
        * tao/PortableServer/Fixed_Size_SArgument_T.cpp:
        * tao/PortableServer/Object_SArgument_T.cpp:
        * tao/PortableServer/Special_Basic_SArgument_T.cpp:
        * tao/PortableServer/UB_String_SArgument_T.cpp:
        * tao/PortableServer/Var_Array_SArgument_T.cpp:
        * tao/PortableServer/Var_Size_SArgument_T.cpp:
        * tao/PortableServer/Vector_SArgument_T.cpp:
          Fixed coverity issues

Mon Aug 29 07:20:29 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * orbsvcs/orbsvcs/ESF/ESF_Copy_On_Write.cpp:
          Fixed runtime issues in orbsvcs.

        * tests/OBV/ValueBox/client.cpp:
          Fixed runtime issues.

Fri Aug 26 11:09:12 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * DevGuideExamples/ValueTypes/Bank/client.cpp:
        * examples/AMH/Sink_Server/client.cpp:
        * examples/Event_Comm/supplier.cpp:
        * examples/Simple/bank/server.cpp:
        * examples/Simple/echo/server.cpp:
        * examples/Simple/grid/server.cpp:
        * examples/Simple/time/server.cpp:
        * orbsvcs/orbsvcs/ESF/ESF_Copy_On_Write.cpp: